Fixing align

--- a/static/base.css
+++ b/static/base.css
@@ -4,5 +4,5 @@ div.footer {
     width: 100%;
     position: fixed;
     bottom: 0px;
-    align-content: center;
+    alignment: center;
 }
